--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   }
   let target = parseInt(prompt("Enter the target sum:"));
   let pairs = findPairs(arr, target);
-  alert(pairs);
+  console.log(pairs);
   
     </script>
 </body>
